tests/snapshots/lib__snapshots__filter@big-regex.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 24
expression: "/(?:){4294967295}"
---
Filter {
    directives: [],
    regex: None,
}
