tests/snapshots/lib__snapshots__filter@invalid-filter.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 26
expression: "crate::target=warn/[0-9]/"
---
(compilation failed)
