tests/snapshots/lib__snapshots__filter@invalid-regex.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 24
expression: "crate::target=warn/[[]"
---
Filter {
    directives: [
        Directive {
            target: Some(
                "crate::target",
            ),
            level: LevelFilter::WARN,
        },
    ],
    regex: None,
}
