tests/snapshots/lib__snapshots__filter@invalid-target.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 24
expression: crate=target=warn
---
Filter {
    directives: [],
    regex: None,
}
