tests/snapshots/lib__snapshots__filter@levels.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 67
expression: "off,error,warn,info,debug,trace"
---
Filter {
    directives: [
        Directive {
            target: None,
            level: LevelFilter::OFF,
        },
        Directive {
            target: None,
            level: LevelFilter::ERROR,
        },
        Directive {
            target: None,
            level: LevelFilter::WARN,
        },
        Directive {
            target: None,
            level: LevelFilter::INFO,
        },
        Directive {
            target: None,
            level: LevelFilter::DEBUG,
        },
        Directive {
            target: None,
            level: LevelFilter::TRACE,
        },
    ],
    regex: None,
}
