tests/snapshots/lib__snapshots__filter@parse_spec_empty_with_filter.env_filter.snap
---
source: tracing-filter/tests/snapshots.rs
assertion_line: 68
expression: crate1/a*c
---
Filter {
    directives: SortedVec {
        vec: [
            Directive {
                target: Some(
                    "crate1",
                ),
                level: LevelFilter::TRACE,
            },
        ],
    },
    regex: Some(
        a*c,
    ),
}
