tests/snapshots/lib__snapshots__filter@parse_spec_invalid_crate_filter.env_filter.snap
---
source: tracing-filter/tests/snapshots.rs
assertion_line: 68
expression: "crate1::mod1=error=warn,crate2=debug/a.c"
---
Filter {
    directives: SortedVec {
        vec: [
            Directive {
                target: Some(
                    "crate2",
                ),
                level: LevelFilter::DEBUG,
            },
        ],
    },
    regex: Some(
        a.c,
    ),
}
